# kgb

./: .gitignore  .reviewboardrc  AUTHORS  LICENSE  MANIFEST.in  NEWS  NEWS.rst  README.md  README.rst  conftest.py  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
contrib/internal/: release.py  runtests.py
kgb/: __init__.py  agency.py  asserts.py  calls.py  contextmanagers.py  errors.py  ops.py  pycompat.py  pytest_plugin.py  signature.py  spies.py  tests.py  utils.py
kgb/tests/: base.py  test_context_managers.py  test_function_spy.py  test_ops.py  test_pytest_plugin.py  test_spy_agency.py  test_spy_call.py
kgb/tests/py3/: test_function_spy.py
tests/: runtests.py
