[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'kgb'
description = 'Utilities for spying on function calls in unit tests.'
authors = [
    {name = 'Beanbag, Inc.', email = 'questions@beanbaginc.com'},
]
license = { text = 'MIT' }
readme = 'README.rst'
requires-python = '>=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*'
dynamic =  ['version']

keywords = [
    'pytest',
    'unit tests',
    'spies',
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Other Environment',
    'Framework :: Pytest',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Testing',
]


[project.urls]
Homepage = 'https://github.com/beanbaginc/kgb'
Documentation = 'https://github.com/beanbaginc/kgb'
Repository = 'https://github.com/beanbaginc/kgb'


[project.entry-points."pytest11"]
kgb = 'kgb.pytest_plugin'


[tool.setuptools.dynamic]
version = { attr = 'kgb.get_package_version' }


[tool.setuptools.packages.find]
where = ['.']
include = ['kgb*']
namespaces = false
